[gd_scene load_steps=4 format=3 uid="uid://p6nj77pjt4lo"]

[ext_resource type="Script" path="res://Scripts/CameraControl.gd" id="1_t17sy"]
[ext_resource type="Texture2D" uid="uid://d06juv1cdwy7j" path="res://Assets/Textures/ShotPreview.png" id="2_y7gbb"]
[ext_resource type="Texture2D" uid="uid://c7mtueal313tn" path="res://Assets/Textures/ShotAimPreview.png" id="3_2k6ru"]

[node name="Camera" type="Node3D"]
script = ExtResource("1_t17sy")

[node name="OverheadCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 5, 0)

[node name="Target" type="Marker3D" parent="."]

[node name="SpinnerY" type="Marker3D" parent="Target"]

[node name="SpinnerX" type="Marker3D" parent="Target/SpinnerY"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 0, 0)

[node name="DirectionDecal" type="Decal" parent="Target/SpinnerY/SpinnerX"]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 1.75318, -3.6066)
layers = 4
size = Vector3(0.1, 0.01, 8)
texture_albedo = ExtResource("2_y7gbb")
cull_mask = 1

[node name="TargetCam" type="Camera3D" parent="Target/SpinnerY/SpinnerX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2.5)

[node name="AimDecal" type="Decal" parent="Target/SpinnerY"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.285)
layers = 4
size = Vector3(0.1, 0.5, 0.1)
texture_albedo = ExtResource("3_2k6ru")
cull_mask = 2

[node name="AimCam" type="Camera3D" parent="Target/SpinnerY"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[node name="FreeCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.28979, 9.10764)

[node name="TransCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.13364, 0)

[node name="TransTimer" type="Timer" parent="TransCam"]
one_shot = true

[node name="StableCam" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
